# BotServer

./: .dockerignore  .env  .gitignore  Bot.py  Data.json  Dockerfile  LICENSE  QQBot.py  QQChat.py  README.md  Requirements.bat  Rquirements.bat  docker-compose.yml  mcdreforged.plugin.json  pyproject.toml  requirements.txt
BotServer/: .env  Bot.py  Config.py  Data.json  Flags.py  Globals.py  Main.py  Minecraft.py  Start.bat  Template.py
BotServer/Config/: Commands.json
BotServer/Plugins/: Ai.py  Ai.py.disabled  Commands.json  Keywords.py  SyncMessage.py  Watch.py  Watcher.py
BotServer/Plugins/Commands/: About.py  Command.py  Help.json  Help.py  List.py  Luck.py  Mcdr.py  Send.py  Server.py  Set.py  __init__.py
BotServer/Resources/: Bot.json  Commands.json  Lagrange.json
BotServer/Scripts/: Config.py  Globals.py  HttpServer.py  Memory.py  Network.py  PluginsChecker.py  Render.py  ServerWatcher.py  Utils.py  Version.py
BotServer/WebUi/: Index.html
Docs/: Format.md  Upgrade.md
MCDR_plugin/: mcdreforged.plugin.json
MCDR_plugin/qq_chat/: __init__.py
Plugins/: SyncMessage.py  Watcher.py  mc_wiki_database.json
Plugins/Commands/: About.py  List.py  Luck.py  Send.py
Plugins/Expand/: Ai.py  Keywords.py  __init__.py
QQBot/: mcdreforged.plugin.json
QQBot/qq_bot/: Core.py  __init__.py
Resources/: Commands.json  Lagrange.json
Resources/WebUi/: Index.html
Scripts/: Network.py  Utils.py
Scripts/Managers/: Data.py  Lagrange.py  Resources.py  Server.py  __init__.py
Scripts/Servers/: Websocket.py
Test/: .env  Start.bat
(+41 files in other folders)
