[project]
name = "Minecraft_QQBot"
version = "2.0.2"
description = "一款与 Minecraft 互通的 Nonebot2 机器人。"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "nonebot2[fastapi]>=2.2.1",
    "nonebot-adapter-onebot>=2.4.6",
    "psutil>=7.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
